--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.6.2",
     "nodemon": "^3.0.1",
     "sequelize": "^6.33.0"
   }
