--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.12.16",
     "axios": "^1.5.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
