--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "react-select": "^5.7.7",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.69.4"
