--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,9 @@
     "react-select": "^5.7.7",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "sass": "^1.69.4"
+    "sass": "^1.69.4",
+    "sweetalert2": "^11.7.32",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
