--- a/client/package.json
+++ b/client/package.json
@@ -12,17 +12,24 @@
   "dependencies": {
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.12.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.15",
+    "@mui/material": "^5.14.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.3",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-select": "^5.7.7",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.69.4",
+    "styled-components": "^6.1.0",
     "sweetalert2": "^11.7.32",
     "sweetalert2-react-content": "^5.0.7"
   },
