--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,13 @@
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.3",
+    "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-oauth": "^1.0.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
@@ -30,7 +33,7 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.69.4",
     "styled-components": "^6.1.0",
-    "sweetalert2": "^11.7.32",
+    "sweetalert2": "^11.6.13",
     "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
