--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.17.0",
     "react-select": "^5.7.7",
     "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "sass": "^1.69.4",
     "styled-components": "^6.1.0",
