--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.6.2",
     "nodemon": "^3.0.1",
-    "sequelize": "^6.33.0"
+    "sequelize": "^6.33.0",
+    "socket.io": "^4.7.2"
   }
 }
