--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "sass": "^1.69.4",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.1.0",
     "sweetalert2": "^11.6.13",
     "sweetalert2-react-content": "^5.0.7"
