--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.2",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "sequelize": "^6.33.0",
     "socket.io": "^4.7.2"
