--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "sass": "^1.69.4",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.1.0",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.6.13",
     "sweetalert2-react-content": "^5.0.7"
   },
