--- a/client/package.json
+++ b/client/package.json
@@ -37,7 +37,8 @@
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.1.0",
     "sweetalert2": "^11.6.13",
-    "sweetalert2-react-content": "^5.0.7"
+    "sweetalert2-react-content": "^5.0.7",
+    "unorm": "^1.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
