--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.12.0",
     "@emotion/react": "^11.11.1",
@@ -19,13 +20,19 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.3",
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/prop-types": "^15.7.9",
+    "antd": "^5.10.3",
     "axios": "^1.5.1",
+    "country-list": "^2.3.0",
+    "iso3166": "^1.0.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-google-oauth": "^1.0.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-phone-number-input": "^3.3.7",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-select": "^5.7.7",
