--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.5.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-google-oauth": "^1.0.0",
     "react-hook-form": "^7.47.0",
