--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-google-oauth": "^1.0.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
     "react-phone-number-input": "^3.3.7",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
